--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "./node_modules/.bin/ts-node src/index.ts",
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "benchmark": "./node_modules/.bin/ts-node src/benchmark.ts",
     "sandbox": "near-sandbox"
   },
@@ -21,6 +21,7 @@
     "@types/node-fetch": "^2.6.13",
     "near-sandbox": "^0.2.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
