--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,38 @@
 # Temporary files
 .tmp
 
-# Log files
-*.log
-npm-debug.log*
 
 # Sandbox data
 /neardev
+
+
+# Environment variables
+.env
+.env.local
+
+# Build artifacts
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Near credentials (jangan sampai bocor!)
+.near-credentials/
+# User-specific temporary files
+/${APPDATA}/
