--- a/benchmark.yml
+++ b/benchmark.yml
@@ -1,8 +1,12 @@
 config:
   target: 'http://localhost:3000'
   phases:
-    - duration: 60
+    - duration: 30
       arrivalRate: 10
+    - duration: 30
+      arrivalRate: 50
+    - duration: 60
+      arrivalRate: 100
   defaults:
     headers:
       Content-Type: 'application/json'
@@ -12,6 +16,6 @@ scenarios:
       - post:
           url: '/send-ft'
           json:
-            receiverId: 'user1.sandbox'
-            amount: '1000000'
-            memo: 'Benchmark Test'
+            receiverId: 'posma-badge.testnet'
+            amount: '100000'
+            memo: 'Artillery Test'
