docs+bench: add curl single/multi-line examples, fix Artillery schema (flow) with staged 10/50/100 RPS, note Node 24 & npx cache workaround

--- a/benchmark.yml
+++ b/benchmark.yml
@@ -12,7 +12,7 @@ config:
       Content-Type: 'application/json'
 scenarios:
   - name: 'Send FT'
-    requests:
+    flow:
       - post:
           url: '/send-ft'
           json:
