feat(rpc): add FastNEAR API key headers & RPC round-robin; perf: multi-key signer + bounded concurrency; docs: env usage & sandbox setup

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
-# Near credentials (jangan sampai bocor!)
+# Near credentials 
 .near-credentials/
 # User-specific temporary files
 /${APPDATA}/
