Initial commit: NEAR FT API Service
- High-performance FT transfer API with Express.js
- Support for testnet and sandbox environments
- Automatic storage deposit handling (NEP-145)
- Optimized with @eclipseeer/near-api-ts for high throughput
- Comprehensive benchmarking with Artillery
- Clean, production-ready codebase
- Complete documentation and setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,15 @@ testnet-*.json
 testnet-*.html
 
 # Editor/backup files
-package.json.save
+*.save
+*.bak
+
+# Benchmark results and temporary files
+benchmark-simple.js
+*.log
 
 # Windows APPDATA artifacts (literal folder in repo)
 ${APPDATA}\npm/
+
+# Large directories that shouldn't be committed
+nearcore/
