--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
+    "near-api-js": "^3.0.4",
     "node-fetch": "^2.7.0"
   }
 }
